# controle-patrimonio

./: .gitignore  LICENSE  README.md  docker-compose.yml
.team/: deliverable-backend.md  deliverable-frontend.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  deps.py  main.py  models.py  permissions.py  supabase.py
backend/app/routers/: __init__.py  _helpers.py  asset_types.py  assets.py  collaborators.py  me.py  movements.py  problems.py  users.py
backend/tests/: conftest.py  test_smoke.py
db/: README.md
db/migrations/: 20260710015206_4c672c11-ed3e-4b12-b1c0-4cde21866f8e.sql  20260711020046_b3cbdc15-af61-42aa-a2d7-c8752f5c686e.sql  20260711020107_83cd5643-034c-4981-b253-ce22b2b3da32.sql  20260714013801_591c6fba-b64b-48fe-b481-1b53bbd529ec.sql  20260715013222_0da444ba-d17e-43ee-8a5c-5f6a6144bd54.sql  20260715013239_65be6be9-86a4-4e38-b2b7-4c07fbb50b5b.sql  20260715030000_enable_realtime.sql  20260715040000_create_collaborators.sql  20260715043509_3fb3c522-2506-4369-82d7-455a37e6d538.sql  20260715050000_add_collaborator_id_to_movements.sql  20260715050400_cfd358f9-cf85-46e2-bc23-d2621a04580c.sql  20260715053637_8ee1549f-ca86-4fc3-8479-ce6d4cb91490.sql  20260715054847_b66fe23b-29ac-496d-bfed-2addcb9191f8.sql  20260717020102_add_kiosk_role.sql  (+7 more)
docs/: ARCHITECTURE.md  DESIGN.md  SETUP.md
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
(+48 files in other folders)
